[package]
name = "suedtirol1-tracker-api"
version = "0.1.0"
authors = ["Andreas Resch <andreas@resch.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8"
actix-web = "4.3"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.3", features = ["postgres", "chrono"]}
dotenv = "0.15.0"
serde = { version = "1.0.200", features = ["derive"]}
serde_json = "1.0.105"
itertools = "0.10.5"
memcache = "*"
